# Sheildd

./: 3000_results_replace_1_with_9.csv  3000_workers_selected_replace_1_with_9.csv  3001_results_replace_1_with_9.csv  3001_workers_selected_replace_1_with_9.csv  3002_results_replace_1_with_9.csv  3002_workers_selected_replace_1_with_9.csv  README.md  attack_timing.py  defense.py  malicious_participant_availability.py  pyproject.toml  requirements.pip  requirements.txt  server.py
3000_models/: model_0_1_end.model  model_0_2_end.model  model_0_2_start.model  model_0_4_end.model  model_0_5_end.model  model_0_6_end.model  model_0_7_end.model  model_0_7_start.model  model_0_8_end.model  model_0_9_end.model  model_10_1_end.model  model_10_3_end.model  model_10_3_start.model  model_10_4_end.model  model_10_5_end.model  model_10_8_end.model  model_11_10_end.model  model_11_2_end.model  model_11_3_end.model  model_11_7_end.model  model_11_9_end.model  model_11_9_start.model  model_12_10_end.model  model_12_6_end.model  model_13_2_end.model  model_13_4_end.model  model_13_6_end.model  model_13_9_end.model  model_14_10_end.model  model_14_10_start.model  model_14_3_end.model  model_14_5_end.model  model_14_7_end.model  model_14_7_start.model  model_14_8_end.model  model_15_10_end.model  model_15_1_end.model  model_15_2_end.model  model_15_2_start.model  model_15_4_end.model  (+285 more)
3001_models/: model_0_1_end.model  model_0_2_end.model  model_0_2_start.model  model_0_4_end.model  model_0_9_end.model  model_10_10_end.model  model_10_10_start.model  model_10_2_end.model  (+228 more)
ML/: models.py  (+1 more)
(+233 files in other folders)
